# TrrtBotFramework

./: .gitignore  CMakeLists.txt  LICENCE  LICENCE.md  README.md
database/: tournaments.db
include/: BotFramework.h  CommandLoader.h  CommandRegistry.h  ConfigManager.h  TournamentDatabase.h  commands.h
include/commands/: BaseCommand.h  Command.h  CommandLoader.h  CommandRegistry.h  EmbedCommand.h  PingCommand.h
include/src/: BotFramework.cpp  ConfigManager.cpp
scripts/: generate_commands_linux.sh  generate_commands_mac.sh  generate_commands_windows.bat
src/: main.cpp
src/classes/: TournamentDatabase.cpp
src/commands/: EmbedCommand.cpp  PingCommand.cpp
